--- a/src/CourseGoals/CourseInput/CourseInput.css
+++ b/src/CourseGoals/CourseInput/CourseInput.css
@@ -22,4 +22,13 @@
     background: #fad0ec;
     border-color: #8b005d;
   }
+
+  .form-control.invalid label{
+     color: red;
+  }
+
+  .form-control.invalid input{
+    background-color: lightpink;
+    border-color: red;
+  }
   
